Update on CSS, HTML and readme file

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           
           <div class="inner-pricing">
             <div class="premium-div">
-              <div>Logo</div>
+              <div class="premium-logo"></div>
               <h3>Premium</h3>
               <ul>
                 <li>Access to the page and its features</li>
@@ -113,22 +113,8 @@
               <p>$75 monthly</p>
             </div>
 
-            <div class="premium-plus-div">
-              <div>Logo</div>
-              <h3>Premium Plus</h3>
-              <ul>
-                <li>Access to the page and its features</li>
-                <li>Real Time Monitoring</li>
-                <li>App for Android and IOS</li>
-                <li>24/7 Support</li>
-                <li>Access to our exclusive learning plataform</li>
-              </ul>
-              <p>$125 monthly</p>
-            </div>
-
-
             <div class="premium-max-div">
-              <div>Logo</div>
+              <div class="premium-max-logo"></div>
               <h3>Premium Max</h3>
               <ul>
                 <li>Access to the page and its features</li>
@@ -140,6 +126,20 @@
               </ul>
               <p>$250 monthly</p>
             </div>
+
+
+            <div class="premium-plus-div">
+              <div class="premium-plus-logo"></div>
+              <h3>Premium Plus</h3>
+              <ul>
+                <li>Access to the page and its features</li>
+                <li>Real Time Monitoring</li>
+                <li>App for Android and IOS</li>
+                <li>24/7 Support</li>
+                <li>Access to our exclusive learning plataform</li>
+              </ul>
+              <p>$125 monthly</p>
+            </div>
           </div>
 
         </div>
@@ -147,16 +147,16 @@
 
       <!-- Footer -->
       <footer>
-        <div>
-          <div>Logo</div>
+        <div class="social-media-div">
+          <div class="social-media-logo"></div>
           <ul>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Youtube</a></li>
+            <li><a class="insta-logo" href="#"></a></li>
+            <li><a class="twitter-logo" href="#"></a></li>
+            <li><a class="youtube-logo" href="#"></a></li>
           </ul>
         </div>
 
-        <div>
+        <div class="services-div">
           <p>Services</p>
           <ul>
             <li><a href="#">Email Reports</a></li>
@@ -165,7 +165,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="about-div">
           <p>About</p>
           <ul>
             <li><a href="#">Our Story</a></li>
@@ -174,7 +174,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="help-div">
           <p>Help</p>
           <ul>
             <li><a href="#">FAQs</a></li>
@@ -182,21 +182,24 @@
           </ul>
         </div>
 
-        <div>
-          <p>Start tracking your projects</p>
+        <div class="call-to-action-div">
+          <p class="call-to-title">Start tracking your projects</p>
           <input type="text" placeholder="Enter your best email" />
           <button>Try for free</button>
         </div>
 
-        <div>
-          <p>&copy;Sparkle 2021 All rights reserved</p>
-        </div>
-
-        <div>
-          <ul>
-            <li><a href="#">Terms and Conditions</a></li>
-            <li><a href="#">Help</a></li>
-          </ul>
+        <div class="copy-terms-div">
+          <div class="copyright-div">
+            <p>&copy;Sparkle 2021 All rights reserved</p>
+          </div>
+          
+          <div class="terms-div">
+            <ul>
+              <li><a href="#">Terms and Conditions</a></li>
+              <li>|</li>
+              <li><a href="#">Help</a></li>
+            </ul>
+          </div>
         </div>
       </footer>
     </div>
